# audio-plugins-dev

./: .clang-format  .gitignore  README.md
.github/workflows/: cmake-docs.yml
Gain/: CMakeLists.txt  Gain.jucer  README.md
Gain/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Gain/installer/: French Coconut Gain.iss
Gain/src/: CocoKnob.cpp  CocoKnob.h  CustomColours.h  CustomLookAndFeel.cpp  CustomLookAndFeel.h  MyCanvas.cpp  MyCanvas.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  TitleBox.cpp  TitleBox.h  common.h
LeslieMaxwell/: CMakeLists.txt  README.md
LeslieMaxwell/src/: CustomLookAndFeel.cpp  CustomLookAndFeel.h  FractionalRingBuffer.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  common.h
